# eigencc

./: .gitignore  .gitmodules  README.md  _sidebar.md  fns.Dockerfile  index.html
cc/: README.md  fns.Dockerfile  release.Dockerfile
cc/sdk/: README.md  build.sh  go.mod  go.sum  tfconfig.go  tfsdk.go
cc/sdk/sgx/: README.md  config.go  teesdk.go  types.go
cc/sdk/sgx/include/: eigentee.h
cc/sdk/sgx/optimism/: main.go
cc/sgx/: CMakeLists.txt
cc/sgx/attestation/: Cargo.toml
cc/sgx/attestation/src/: ias.rs  lib.rs
cc/sgx/binder/: Cargo.toml  Enclave.edl  build.rs
cc/sgx/binder/src/: binder.rs  ocall.rs
cc/sgx/cmake/scripts/: parse_cargo_packages.py  sgx_link_sign.sh  sgx_test.sh
cc/sgx/cmake/tomls/: Cargo.sgx_trusted_lib.toml  Cargo.sgx_untrusted_app.toml  Cargo.unix_app.toml
cc/sgx/config/: Cargo.toml  build.config.toml
cc/sgx/dcap/: Cargo.toml
cc/sgx/dcap/src/: main.rs
cc/sgx/eigen_core/: Cargo.toml
cc/sgx/eigen_core/src/: error.rs
cc/sgx/eigen_core/src/config/: mod.rs
cc/sgx/eigen_core/src/ipc/: macros.rs
cc/sgx/eigen_core/src/ipc/protos/: ecall.rs  mod.rs
cc/sgx/eigen_core/src/rpc/: channel.rs  sendrecv.rs  server.rs
cc/sgx/eigen_core/src/rpc/sgx/: client.rs  mod.rs
cc/sgx/examples/cli/: Cargo.toml
cc/sgx/examples/cli/src/: main.rs
cc/sgx/examples/quickstart/: Cargo.toml
cc/sgx/examples/quickstart/src/: main.rs
cc/sgx/keys/: README.md
cc/sgx/sdk/: Cargo.toml
cc/sgx/sdk/c_sdk/: Cargo.toml
cc/sgx/sdk/c_sdk/src/: context.rs  task.rs
cc/sgx/sdk/src/: lib.rs
cc/sgx/services/fns/client/: Cargo.toml
cc/sgx/services/fns/proto/: Cargo.toml
cc/sgx/services/fns/sgx_app/: Cargo.toml
cc/sgx/services/fns/sgx_app/src/: main.rs
cc/sgx/services/fns/sgx_trusted_lib/: Cargo.toml
cc/sgx/services/fns/sgx_trusted_lib/src/: fns.rs  global.rs  lib.rs  worker.rs
cc/sgx/services/fns/sgx_trusted_lib/src/sgx/: mod.rs
cc/sgx/services/fns/sgx_trusted_lib/src/trusted_worker/: demo_func.rs  kms.rs  mod.rs  operator_add.rs  operator_sub.rs  operators.rs  pk_reg.rs  register_func.rs  relay.rs
cc/sgx/services/proto_gen/: Cargo.toml  main.rs
cc/sgx/test_operators/: test_encdes.sh  test_teesdk.c
cc/sgx/tests/: README.md
cc/sgx/tests/unit_test/sgx_app/: Cargo.toml
cc/sgx/tests/unit_test/sgx_app/src/: main.rs
cc/sgx/tests/unit_test/sgx_trusted_lib/: Cargo.toml
cc/sgx/tests/unit_test/sgx_trusted_lib/src/: sgx.rs
cc/sgx/utils/: Cargo.toml
cc/sgx/utils/src/: lib.rs
did/: README.md
docs/: Introduction_to_Arbitrium_cn.md  README.md  _sidebar.md  index.html  miner.md  miners.md  operators.md  overview.md  overview_cn.md  secret.md
docs/egip/: 00001.md  00002.md  00003.md
fl/: README.md
fl/abe/: README.md  cpabe_bsw07.py  setup.py
fl/abe/tests/: test_cpabe_bsw07.py
fl/crypto_tensor/: config.py  spdz.py
fl/examples/fl_tf_device/: README.md  fl_implemetation.py  fl_mnist_implementation_tutorial_utils.py
fl/examples/lr/: README.md  prediction.py  run.sh  training.py
fl/examples/lr/configs/: cryptoproducer.py  inputprovider.py  outputreceiver.py  server0.py  server1.py  start.sh  stop.sh
l2/: README.md  add_instr.diff  arb-os.diff  arbitrum.diff  geth.diff  hello.sol  solc.diff
l2/box/mixer/: .gitignore  README.md  package.json  truffle-config.js
l2/box/mixer/circuit/: generate_leaf_existence_input.js  get_merkle_root.circom  input.json  mixer.circom  public.json  run.sh  test.js  verifier.sol
l2/box/mixer/contracts/: MerkleTree.sol  Mixer.sol
l2/box/mixer/migrations/: 1_deploy_contracts.js
l2/box/mixer/scripts/: big_num_generator.py  big_prime_generator.py  call_mimc.js  call_mixer.js  deploy_mimc.js  gen_contract.js
l2/eigen-tutorials/: .gitignore  README.md  package.json
l2/eigen_call_sample/: package.json  truffle-config.js
l2/eigen_call_sample/contracts/: ArbSys.sol  MetaCoin.sol
l2/eigen_call_sample/test/: TestMetaCoin.sol
l2/eigen_service/: .env.sample  Dockerfile  README.md  db_pk.sqlite  db_transaction_history.sqlite  package.json  tsconfig.json
l2/eigen_service/src/: app.js  app.ts  database_friend_relationship.ts  database_pk.js  database_pk.ts  database_recovery.ts  database_transaction_history.js  database_transaction_history.ts  ecies.js  ecies.ts  log.js  log.ts  secretshare.ts  session.ts  util.ts
l2/eigen_service/src/login/: config.ts  google.ts
l2/eigen_service/src/pid/: pid.ts
l2/eigen_service/test/: app.js  app.test.ts  app.ts  ecies.test.ts  jwt.test.ts  secret.test.ts
l2/kms/: README.md  package.json
l2/kms/src/: app.js  util.js
l2/mixer/: .env.sample  README.md  clean.sh  package.json  truffle-config.js
l2/mixer/circuit/: MiMCMerkle.js  generate_leaf_existence_input.js  get_merkle_root.circom  mixer.circom  run.sh
l2/mixer/contracts/: MerkleTree.sol  Mixer.sol  verifier.sol
l2/mixer/migrations/: 1_deploy_contracts.js
l2/mixer/scripts/: call_mimc.js  call_mixer.js  deploy_mimc.js
l2/new_avm_instr/: README.md  arb-avm-cpp.diff  truffle-config.js
l2/new_avm_instr/contracts/: hello.sol
l2/new_instr/: package-lock.json  truffle-config.js
l2/new_instr/contracts/: ArbSys.sol  ConvertLib.sol  MetaCoin.sol  Migrations.sol  context.sol  hello.sol
l2/pkcs/: README.md  package.json
l2/pkcs/src/: app.js  database.js  ecies.js  util.js
l2/pkcs/test/: app.js
sgx/: .gitmodules
sgx/attestation/src/: cert.rs  report.rs  verifier.rs
sgx/binder/: Cargo.toml
sgx/binder/src/: lib.rs
sgx/cmake/: MesaTEEGenVars.cmake  MesaTEEUtils.cmake
sgx/cmake/scripts/: gen_cov.sh  prep.sh
sgx/cmake/tomls/: Cargo.sgx_trusted_lib.toml  Cargo.unix_app.toml
sgx/config/config_gen/: Cargo.toml
sgx/config/src/: lib.rs
sgx/dcap/: Dockerfile  README.md
sgx/eigen_core/ipc_attribute/src/: lib.rs
sgx/eigen_core/src/: lib.rs  prelude.rs
sgx/eigen_core/src/rpc/: sendrecv.rs
sgx/release/tests/: runtime.config.toml
sgx/sdk/c_sdk/src/: auditor_set.rs  enclave_info.rs  lib.rs
sgx/sdk/src/: lib.rs
sgx/services/fns/client/: Cargo.toml
sgx/services/fns/proto/: Cargo.toml
sgx/services/fns/sgx_trusted_lib/: Cargo.toml
sgx/utils/: Cargo.toml
(+12 files in other folders)
