[package]
name = "eigen_core"
version = "0.1.0"
description = "Core of EigenCC, including IPC/RPC/Error-handling/Database/etc."
license = "Apache-2.0"
edition = "2018"

[lib]
name = "eigen_core"
path = "src/lib.rs"

[features]
default = []
mesalock_sgx = ["sgx_tstd", "sgx_tcrypto", "sgx_rand", "sgx_tse", "ipc", "config/mesalock_sgx", "utils/mesalock_sgx", "attestation/mesalock_sgx"]
ipc = []
eigen_unit_test = []

[dependencies]
cfg-if       = { version = "0.1.9" }
env_logger   = { version = "0.7.1" }
lazy_static  = { version = "1.0.2", features = ["spin_no_std"] }
log          = { version = "0.4.6" }
rustls       = { version = "0.16.0", features = ["dangerous_configuration"] }
serde        = { version = "1.0.92" }
serde_derive = { version = "1.0.92" }
serde_json   = { version = "1.0.39" }
chrono       = { version = "0.4.6" }
ring         = { version = "0.16.5" }
webpki       = { version = "0.21.0" }
webpki-roots = { version = "0.19.0" }
base64       = { version = "0.10.1" }
yasna        = { version = "0.3.0", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint   = { version = "0.2.2" }
bit-vec      = { version = "0.6.1", default-features = false }
httparse     = { version = "1.3.2", default-features = false }
uuid         = { version = "0.8.1", features = ["v4"] }
net2         = { version = "0.2.33" }
toml         = { version = "0.5.3" }

sgx_tstd  = { version = "1.1.0", features = ["net", "backtrace"], optional = true }
sgx_types = { version = "1.1.0" }
sgx_urts  = { version = "1.1.0" }
sgx_tcrypto = { version = "1.1.0", optional = true }
sgx_rand  = { version = "1.1.0", optional = true }
sgx_tse   = { version = "1.1.0", optional = true }

config = { path = "../config" }
utils = { path = "../utils" }
ipc_attribute = { path = "./ipc_attribute" }
attestation = { path = "../attestation" }
