[package]
name = "sdk"
version = "0.1.0"
description = "Client SDK, applications can utilize it to invoke EigenTEE services."
license = "Apache-2.0"
edition = "2018"

[dependencies]
fns_client           = { path = "../services/fns/client" }
eigen_core         = { path = "../eigen_core" }
utils       = { path = "../utils" }
uuid                 = { version = "0.8.1", features = ["v4"] }
