[package]
name = "sdk_c"
version = "0.1.0"
description = "EigenTEE SDK C API."
license = "Apache-2.0"
edition = "2018"

[lib]
name = "sdk_c"
crate-type = ["cdylib"]

[dependencies]
sdk = { version = "0.1.0" }
eigen_core = { version = "0.1.0" }
log = { version = "0.4.6" }
env_logger = { version = "0.7.1" }
libc = { version = "0.2.58" }
nix = { version = "0.17.0" }
