[package]
name = "fns"
version = "0.1.0"
description = "Function node service, trusted gateway in front of the actual worker."
license = "Apache-2.0"
build = "build.rs"
edition = "2018"

[features]
default = []

[dependencies]
sgx_types       = { version = "1.1.0" }
sgx_urts        = { version = "1.1.0" }
eigen_core    = { version = "0.1.0" }
binder  = { version = "0.1.0" }

threadpool      = { version = "1.0" }
ctrlc           = { version = "3.1.2" }
log             = { version = "0.4.6" }
env_logger      = { version = "0.7.1" }


